fix(tab, tab-nav): remove z-index so popover appears on top (#2965)

--- a/src/components/calcite-tab/calcite-tab.scss
+++ b/src/components/calcite-tab/calcite-tab.scss
@@ -3,7 +3,7 @@
 }
 
 :host {
-  @apply hidden z-10 text-color-3;
+  @apply hidden text-color-3;
 }
 
 :host([active]) {
